# wjpdebttracking

./: .graphifyignore  _headers  about.html  accept-invite.html  admin-tier-switcher.js  admin.html  advisor-upgrade.css  advisor-upgrade.js  ai-coach-v2.css  ai-coach-v2.js  app.js  faq.html  features.html  goals.html  help.html  how.html  index.html  intro.html  landing-menu.js  landing.css  manifest.json  math.html  netlify.toml  package.json  plaid-setup-checklist.md  pricing.html  privacy.html  referrals.html  robots.txt  server.ps1  settings-aicoach-upgrade.js  signin.html  signup-picker.js  signup.html  sitemap.xml  style.css  sw.js  terms.html  verify.html  wjp-acct-name-sync.js  (+177 more)
_deploy/: app.js
chrome-extension/: README.md  background.js  content.js  manifest.json  popup.html  popup.js
desktop/: README.md
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
docs/: credit-array-setup.md
graphify-out/: .gitignore  GRAPH_REPORT.md  graph.json  manifest.json
netlify/functions/: admin-data-health.js  admin-list-backups.js  admin-manage.js  admin-restore-backup.js  admin-stats.js  admin-status.js  admin-tx-diagnostic.js  ai-cloud.js  array-credit-pull.js  calendar-sync-url.js  calendar.js  check-webhook-pending.js  cleanup-free-tier-items.js  create-link-token.js  debt-write.js  debug-item-state.js  email-cron-w3.js  email-cron.js  exchange-public-token.js  fire-sandbox-webhook.js  get-accounts.js  get-transactions.js  household-manage.js  package.json  (+17 more)
scripts/: verify-index-html.js
vs/: mint.html  rocket-money.html  ynab.html
(+10 files in other folders)
